module.exports = (sequelize, DataTypes) => {
    const Game_Key = sequelize.define('Game_Key', {
        id: {
            type: DataTypes.INTEGER,
            primaryKey: true,
            autoIncrement: true
        },
        game_id: {
            type: DataTypes.INTEGER,
            allowNull: false
        },
        detail_id: {
            type: DataTypes.INTEGER,
            allowNull: false
        },
        secret_key: {
            type: DataTypes.STRING,
            allowNull: false,
            unique: true
        },
        is_sold: {
            type: DataTypes.BOOLEAN,
            defaultValue: false
        },
        sold_at: {
            type: DataTypes.DATE,
            allowNull: true
        }
    }, {
        timestamps: true
    });
    return Game_Key;
}